src/test/deca/syntax/invalid/unterminated_comment.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : commentaire non terminé

/* ceci est un commentaire non terminé
int x = 5;
